<resources>
    <string name="konkani_title">Litrit</string>

    <!-- Logger urls -->
    <string name="logger_url_beta">http://idid.in/android/logsdebug.php</string>
    <string name="logger_url_production">http://idid.in/android/logsdebug.php</string>
    
    <!-- Special characters -->
    <string name="backspace">400</string>
    <string name="symbols">401</string>
    <string name="english">402</string>
    <string name="space">403</string>
    <string name="enter">404</string>
    <string name="shift">405</string>
    <string name="numbers">406</string>
    
    <string name="tablet_layout_setting_key">use_small_layout</string>
    <string name="tablet_layout_setting_title">Use small layout</string>
    <string name="tablet_layout_setting_summary">Reduces the height of the keyboard and the key sizes</string>
    <string name="first_run_tutorial">first_run_tutorial</string>
    <string name="preview_your_settings">Preview</string>

    <string name="menu_language">ENG</string>
    
    <!-- Settings -->
    <!-- Fragments -->
    <!-- Defaults -->
    <!-- Welcome fragment -->
    <string name="welcome_instruction">Welcome. If you are unable to see the following text in Hindi, then your device is not supported.</string>
    <string name="welcome_title">क्या आपका फोन यह वाक्य हिन्दी में ठीक से दिखा रहा है?</string>
    <!-- Enable Fragment -->
    <string name="enable_instructions_head">To start using the keyboard, it needs to be enabled and made default.</string>
    <string name="enable_step_1">1) In the next screen, enable \"Litrit\" </string>
    <string name="enable_step_2">2) Then, click \"OK\" </string>
    <string name="enable_step_3">3) Finally, press the \"Back\" button on your phone</string>
    <!-- Default Fragment -->
    <string name="default_instructions_head">The keyboard has been successfully enabled. Now make it your default keyboard.</string>
    <string name="default_step_1">In the next screen, choose \"Litrit\"</string>
    <!-- Button Text -->
    <string name="welcome_button">Yes, its alright</string>
    <string name="enable_button">Enable Litrit</string>
    <string name="default_button">Make Litrit your default</string>
    <!-- Congrats fragment -->
    <string name="congrats_instruction">The keyboard is ready for use</string>
    <string name="congrats_title">Thank you</string>
    <string name="congrats_button">Settings</string>
    <!-- Settings -->
    <string name="settings_instruction">Keyboard size</string>
    <string name="settings_layout_big">SMALL</string>
    <string name="settings_layout_small">BIG</string>
    <string name="do_you_like">Liked Swarachakra?</string>
    <string name="rate_us">Rate us on Google Play Store.</string>

</resources>
