<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:horizontalGap="0dp"
    android:keyHeight="6.8%p"
    android:keyWidth="10%p"
    android:verticalGap="0dp" >

    <Row>


    </Row>

    <Row>

        <Key
            android:codes="28"
            android:keyEdgeFlags="left" />

        <Key
            android:codes="28" />

        <Key
            android:codes="29" />

        <Key
            android:codes="30" />

        <Key
            android:codes="31"
            />

        <Key
            android:codes="32"
             />

        <Key
            android:codes="33"
            />

        <Key
            android:codes="34"
            />

        <Key
            android:codes="35"
            />

        <Key
            android:codes="36"
            android:keyEdgeFlags="right"
            />
    </Row>

    <Row>

        <Key
            android:codes="37"
            android:keyEdgeFlags="left"
            android:keyLabel="a" />

        <Key
            android:codes="38"
            android:keyLabel="s" />

        <Key
            android:codes="39"
            android:keyLabel="d" />

        <Key
            android:codes="40"
            android:keyLabel="f" />

        <Key
            android:codes="41"
            android:keyLabel="g" />

        <Key
            android:codes="42"
            android:keyLabel="h" />

        <Key
            android:codes="43"
            android:keyLabel="j" />

        <Key
            android:codes="44"
            android:keyLabel="k" />

        <Key
            android:codes="45"
            android:keyEdgeFlags="right"
            android:keyLabel="l" />
    </Row>

    <Row>

        <Key
            android:codes="@string/shift"
            android:horizontalGap="1.125%p"
            android:isModifier="true"
            android:isSticky="true"
            android:keyEdgeFlags="left"
            android:keyIcon="@drawable/shift_active"
            android:keyWidth="11.875%p" />

        <Key
            android:codes="46"
            android:keyLabel="z" />

        <Key
            android:codes="47"
            android:keyLabel="x" />

        <Key
            android:codes="48"
            android:keyLabel="c" />

        <Key
            android:codes="49"
            android:keyLabel="v" />

        <Key
            android:codes="50"
            android:keyLabel="b" />

        <Key
            android:codes="51"
            android:keyLabel="n" />

        <Key
            android:codes="52"
            android:keyLabel="m" />

        <Key
            android:codes="@string/backspace"
            android:horizontalGap="2.875%p"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/delete"
            android:keyWidth="11.875%p" />
    </Row>

    <Row android:rowEdgeFlags="bottom" >

        <Key
            android:codes="@string/backspace"
            android:horizontalGap="0.875%p"
            android:keyEdgeFlags="left"
            android:keyLabel="123"
            android:keyWidth="13.5%p" />

        <Key
            android:codes="@string/english"
            android:horizontalGap="1.5%p"
            android:keyLabel="Hn"
            android:keyWidth="9.25%p" />

        <Key
            android:codes="@string/space"
            android:horizontalGap="1.75%p"
            android:keyWidth="46.25%p"
            android:keyLabel="" />

        <Key
            android:codes="53"
            android:horizontalGap="1.75%p"
            android:keyWidth="9.25%p" />

        <Key
            android:codes="@string/enter"
            android:horizontalGap="1.5%p"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/sym_keyboard_return"
            android:keyWidth="13.5%p" />
    </Row>

<!--    <Row>-->
<!--&lt;!&ndash;        android:keyHeight="1.484375%p"&ndash;&gt;-->
<!--&lt;!&ndash;        android:verticalGap="0%p" >&ndash;&gt;-->
<!--    </Row>-->

</Keyboard>