<?xml version="1.0" encoding="utf-8"?>
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:horizontalGap="0dp"
    android:keyHeight="6.8%p"
    android:keyWidth="9%p"
    android:verticalGap="0dp">
    <!--android:keyHeight="7.738%p"-->

    <Row>

        <Key
            android:codes="@string/english"
            android:keyEdgeFlags="left"
            android:horizontalGap="120dp"
            android:keyWidth="56%p"
            android:keyIcon="@drawable/language_switcher"
            />

        <Key
            android:codes="405"
            android:keyEdgeFlags="right"
            android:horizontalGap="0dp"
            android:keyWidth="6%p"
            android:keyIcon="@drawable/emoji"
            />
    </Row>

    <Row>

        <Key android:codes="136" android:keyEdgeFlags="left" />
        <Key android:codes="137"/>
        <Key android:codes="138"/>
        <Key android:codes="139"/>
        <Key android:codes="140"/>
        <Key android:codes="141"/>
        <Key android:codes="142" />
        <Key android:codes="143" />
        <Key android:codes="144" />
        <Key android:codes="145" />
        <Key android:codes="146" android:keyEdgeFlags="right" />


    </Row>

    <Row>

        <Key android:codes="147" android:keyEdgeFlags="left" />
        <Key android:codes="148"/>
        <Key android:codes="149"/>
        <Key android:codes="150"/>
        <Key android:codes="174"/>
        <Key android:codes="175"/>
        <Key android:codes="176" />
        <Key android:codes="177" />
        <Key android:codes="178" />
        <Key android:codes="179" />
        <Key android:codes="180" android:keyEdgeFlags="right" />


    </Row>

    <Row>

        <Key android:codes="181" android:keyEdgeFlags="left" />
        <Key android:codes="182"/>
        <Key android:codes="183"/>
        <Key android:codes="184"/>
        <Key android:codes="185"/>
        <Key android:codes="186"/>
        <Key android:codes="187" />
        <Key android:codes="188" />
        <Key android:codes="189" />
        <Key android:codes="190" />
        <Key android:codes="191" android:keyEdgeFlags="right" />


    </Row>

    <Row>

        <Key android:codes="192" android:keyEdgeFlags="left" />
        <Key android:codes="193"/>
        <Key android:codes="194"/>
        <Key android:codes="195"/>
        <Key android:codes="196"/>
        <Key android:codes="197"/>
        <Key android:codes="198" />
        <Key android:codes="199" />
        <Key android:codes="206" />
        <Key android:codes="207" />
        <Key android:codes="208" android:keyEdgeFlags="right" />


    </Row>

    <Row>


        <Key android:codes="209" android:keyEdgeFlags="left" />
        <Key android:codes="210"/>
        <Key android:codes="211"/>
        <Key android:codes="212"/>
        <Key android:codes="213"/>
        <Key android:codes="214"/>
        <Key android:codes="215" />
        <Key android:codes="216" />
        <Key android:codes="217" />
        <Key android:codes="218" />
        <Key android:codes="219" android:keyEdgeFlags="right"/>


    </Row>


    <!--<Key-->
    <!--android:codes="42" />-->

    <!--<Key-->
    <!--android:codes="43" />-->

    <!--<Key-->
    <!--android:codes="44" />-->

    <!--<Key-->
    <!--android:codes="45" />-->

    <!--<Key-->
    <!--android:codes="46" />-->

    <!--<Key-->
    <!--android:codes="47" />-->

    <!--<Key android:codes="39" />-->

    <!--<Key android:codes="40" />-->

    <!--<Key-->
    <!--android:codes="48" />-->

    <!--<Key-->
    <!--android:codes="49" />-->

    <!--<Key-->
    <!--android:codes="50" />-->

    <!--<Key-->
    <!--android:codes="51" />-->

    <!--<Key-->
    <!--android:codes="52" />-->

    <!--<Key-->
    <!--android:codes="53" />-->

    <!--<Key-->
    <!--android:codes="34" />-->

    <!--<Key-->
    <!--android:codes="35" />-->

    <!--<Key
        android:codes="36" />-->

    <!--<Key
        android:codes="37" />-->

    <!--<Key android:codes="38" />-->

    <Row>

        <Key
            android:codes="@string/backspace"
            android:isRepeatable="true"
            android:keyEdgeFlags="left"
            android:keyWidth="16%p"
            android:keyIcon="@drawable/delete" />


        <!--        <Key-->
        <!--            android:codes="@string/english"-->
        <!--            android:keyLabel="Ab" />-->

        <Key
            android:codes="@string/space"
            android:keyIcon="@drawable/space"
            android:keyWidth="48%p" />



        <Key
            android:codes="@string/enter"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyWidth="16%p"
            android:keyIcon="@drawable/sym_keyboard_return" />

    </Row>

</Keyboard>